# pyContinuum

./: .gitignore  README.md  pyproject.toml  readme.md  trying_examples.ipynb  upload_to_pypi.bat
.github/workflows/: tests.yml
docs/: conf.py  index.rst
examples/: simple_example.py
pycontinuum/: __init__.py  endgame.py  monodromy.py  parameter_homotopy.py  polynomial.py  solver.py  start_systems.py  tracking.py  utils.py  validation.py  visualization.py  witness_set.py
pycontinuum.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: test_advanced_features.py  test_edge_cases.py  test_integration.py  test_optional_dependencies.py  test_polynomial.py  test_public_api.py  test_readme_examples.py  test_regressions.py  test_solver.py  test_start_systems.py  test_validation.py
